--- a/index.html
+++ b/index.html
@@ -1,74 +1,75 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
+<head>
+	<!-- Meta tags -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Web UI Training Website">
+	<meta name="author" content="Globant">
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Backbone-requirejs-example : Example of a website using requireJS and backboneJS" />
+	<!-- Stylesheets -->
+	<link href="css/bootstrap.css" rel="stylesheet"	type="text/css"/>
+	<link href="css/bootstrap-responsive.css" rel="stylesheet"	type="text/css"/>
+	<link href="css/main.css" rel="stylesheet"	type="text/css"/>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+	<!-- JavaScripts -->
+	<script data-main="js/main" src="js/libs/require/require.js"></script>
 
-    <title>Backbone-requirejs-example</title>
-  </head>
 
-  <body>
+	<!-- Icons -->
+	<link rel="shortcut icon" href="img/favicon.png">
+	
+	<title>Samsung Galaxy S3</title>
+</head>
+<body>
+	<!-- NAVBAR -->
+	<div class="navbar-wrapper">
+		<!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
+		<div class="container">
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/tomas-campodonico/backbone-requireJS-example">View on GitHub</a>
+			<div class="navbar navbar-inverse">
+				<div class="navbar-inner">
+					<!-- Responsive Navbar Part 1: Button for triggering responsive navbar (not covered in tutorial). Include responsive CSS to utilize. -->
+					<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="brand" href="#"><img alt="Samsung" src="img/logo.png" /></a>
+					<!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
+					<div class="nav-collapse collapse">
+						<ul class="nav">
+							<li class="active"><a href="#">Home</a></li>
+							<li><a href="#/gallery">Gallery</a></li>
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <b class="caret"></b></a>
+								<ul class="dropdown-menu">
+									<li><a href="#/products/red">Red</a></li>
+									<li><a href="#/products/grey">Grey</a></li>
+									<li><a href="#/products/brown">Brown</a></li>
+									<li class="divider"></li>
+									<li class="nav-header">Comming soon</li>
+									<li><a href="#/coming">Blue</a></li>
+									<li><a href="#/coming">White</a></li>
+								</ul>
+							</li>
+							<li><a href="#/contest">Contest</a></li>
+						</ul>
+					</div><!--/.nav-collapse -->
+				</div><!-- /.navbar-inner -->
+			</div><!-- /.navbar -->
 
-          <h1 id="project_title">Backbone-requirejs-example</h1>
-          <h2 id="project_tagline">Example of a website using requireJS and backboneJS</h2>
+		</div> <!-- /.container -->
+	</div><!-- /.navbar-wrapper -->
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/tomas-campodonico/backbone-requireJS-example/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/tomas-campodonico/backbone-requireJS-example/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+	<!-- Container -->
+	<div id="content" class="container">
+	</div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Backbone-requirejs-example maintained by <a href="https://github.com/tomas-campodonico">tomas-campodonico</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+	<!-- Footer -->
+	<footer class="navbar-wrapper">
+		<p><a href="mailto:tomas.campodonico@globant.com">Mandame un mail</a></p>
+		<p>Todos los derechos quedan reservados</p>
+	</footer>
+</body>
 </html>
